fix: Tighten the spacing at the top of the logo in index.module.sass.

--- a/src/styles/index.module.sass
+++ b/src/styles/index.module.sass
@@ -2,7 +2,7 @@
     width: 400px
     height: auto
     max-width: 100%
-    margin: -2rem auto 2rem
+    margin: -3rem auto 2rem
     display: block
     color: var(--color-theme)
 
